Fixed a minor layout issue

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -261,7 +261,7 @@ kbd {
 }
 
 @media (min-width: $screen-sm-min) {
-   input#search {
+   form#searchForm {
       position: relative;
       right: 20px;
    }
